--- a/src/main/resources/templates/consultant/home.html
+++ b/src/main/resources/templates/consultant/home.html
@@ -11,6 +11,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/open-iconic/1.1.1/font/css/open-iconic-bootstrap.min.css">
 
     <!--<link th:href="@{/static/css/bootstrap.css}" rel="stylesheet" type="text/css" />
     <script th:src="@{/static/js/jquery.js}"></script>
@@ -18,71 +19,88 @@
     <script th:src="@{/static/js/bootstrap.js}"></script>
     <script th:src="@{/js/test.js}"></script>-->
 
-    <link rel="stylesheet"
-          href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link th:href="@{/css/base.css}" rel="stylesheet" type="text/css" />
     <link th:href="@{/css/home.css}" rel="stylesheet" type="text/css" />
 </head>
 <body>
-<div>
- <nav class="navbar navbar-expand-sm navbar-dark">
-        <div class="container-fluid">
-            <a th:href="@{/home}" class="navbar-brand font-weight-bolder"><strong>THESISMGR: </strong><span id="neptun" sec:authentication="principal.username"></span></a>
-            <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link" th:href="@{/consultant/home}">Témáim</a></li>
-                <li class="nav-item"><a class="nav-link" th:href="@{/consultant/alltopic}">Összes téma</a></li>
-                <li class="nav-item"><a class="nav-link" th:href="@{/consultant/createtopic}" href="/consultant/createtopic">Téma kiírás</a></li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-                <li class="dropdown"><a class=" btn dropdown-toggle nav-link" id="dropdown" data-toggle="dropdown">Személyes</a>
-                    <div class="dropdown-menu">
-                        <a class="dropdown-item" href="#">Adatok</a>
-                        <a class="dropdown-item" th:href="@{/logout}" href="/logout">Kijelentkezés</a>
-                    </div>
-                </li>
-            </ul>
+
+<div class = "content">
+    <div class="contentWrap">
+        <!----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
+        <div>
+            <nav class="navbar navbar-expand-sm navbar-dark">
+                <div class="container-fluid">
+                    <a th:href="@{/home}" class="navbar-brand font-weight-bolder"><strong>THESISMGR: </strong><span
+                            id="neptun" sec:authentication="principal.username"></span></a>
+                    <ul class="navbar-nav navbar-collapse">
+                        <li class="nav-item"><a class="nav-link" th:href="@{/home}">Témáim</a></li>
+                        <li class="nav-item"><a class="nav-link" th:href="@{/consultant/alltopic}">Összes téma</a></li>
+                        <li class="nav-item"><a class="nav-link" th:href="@{/consultant/createtopic}" href="/createtopic">Téma kiírás</a>
+                        </li>
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li class="dropdown"><a class=" btn dropdown-toggle nav-link" id="dropdown" data-toggle="dropdown">Személyes <span class="oi oi-home"></span></a>
+                            <div class="dropdown-menu">
+                                <a class="dropdown-item" href="#"><span class="oi oi-person"></span> Adatok</a>
+                                <a class="dropdown-item" th:href="@{/logout}" href="/logout"><span class="oi oi-account-logout"></span> Kijelentkezés</a>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
         </div>
-    </nav>
-</div>
-<!--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
-<hr>
-<div class="d-flex justify-content-center">
-    <h3>Kiírt témáim</h3>
-</div>
-<div class="d-flex justify-content-center message" th:text="${topicUpdateMsg}"></div>
+        <!------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
 
-<div>
-    <table class="table table-hover topicTable">
-        <thead>
-            <tr>
-                <th>Téma címe</th>
-                <th>Státusz</th>
-                <th></th>
-                <th></th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-      <th:block th:each="topic: ${allTopic}">
-            <tr>
-                <td th:text="${topic.getName()}"></td>
-                <td th:if="${topic.getStatus() == 'választható'}" class="successColor" th:text="${topic.getStatus()}"></td>
-                <td th:unless="${topic.getStatus() == 'választható'}" class="warnColor" th:text="${topic.getStatus()}"></td>
-                <td><a th:href="@{/consultant/choosetopic(topicid=(${topic.topicid}))}"><button  class="btn btn-primary">Részletek</button></a></td>
-                <td><a th:href="@{/consultant/updatetopic(topicid=(${topic.topicid}))}"><button class="btn btn-info">Módosítás</button></a></td>
-                <td>
-                    <form th:action="@{/deletetopic}" method="post">
-                        <input name="topicid" type="hidden" th:value="${topic.topicid}">
-                        <button  class="btn btn-danger topicButton" type="submit" onclick="return confirm('Biztosan törölni szeretnéd?')">Törlés</button>
-                    </form>
+        <div class="d-flex justify-content-center">
+            <h3>Kiírt témáim</h3>
+        </div>
+        <div class="d-flex justify-content-center message" th:text="${topicUpdateMsg}"></div>
 
-                </td>
-            </tr>
-        </th:block>
-        </tbody>
-    </table>
-    <div id="topicdesc" class="topicDescription" th:text="${description}"></div>
-</div>
-<!--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
+        <div>
+            <table class="table table-hover topicTable">
+                <thead>
+                    <tr>
+                        <th>Hallgató</th>
+                        <th>Téma címe</th>
+                        <th>Státusz</th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody>
+              <th:block th:each="topic: ${allTopic}">
+                    <tr>
+                        <td th:unless="${topic.getStatus() == 'választható'}"><a th:href="@{/consultant/studentdetails(topicid=${topic.getTopicid()})}">Hallgató</a></td>
+                        <td th:if="${topic.getStatus() == 'választható'}"></td>
+                        <td th:text="${topic.getName()}"></td>
+                        <td th:if="${topic.getStatus() == 'választható'}" class="successColor" th:text="${topic.getStatus()}"></td>
+                        <td th:unless="${topic.getStatus() == 'választható'}" class="warnColor" th:text="${topic.getStatus()}"></td>
+                        <td><a th:href="@{/consultant/choosetopic(topicid=(${topic.topicid}))}"><button  class="btn btn-primary"><span class="oi oi-info"></span></button></a></td>
+                        <td><a th:href="@{/consultant/updatetopic(topicid=(${topic.topicid}))}"><button class="btn btn-info"><span class="oi oi-pencil"></span></button></a></td>
+                        <td>
+                            <form th:action="@{/deletetopic}" method="post">
+                                <input name="topicid" type="hidden" th:value="${topic.topicid}">
+                                <button  class="btn btn-danger topicButton" type="submit" onclick="return confirm('Biztosan törölni szeretnéd?')"><span class="oi oi-trash"></span></button>
+                            </form>
+
+                        </td>
+                    </tr>
+                </th:block>
+                </tbody>
+            </table>
+            <div id="topicdesc" class="topicDescription" th:text="${description}"></div>
+        </div>
+            </div>
+        <!--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
+        <footer class="footer">
+            <div class="container">
+                <div class="center">
+                    <img th:src="@{/img/me_logo.png}" src="">
+                </div>
+            </div>
+        </footer>
+
+    </div>
 </body>
 </html>
