--- a/src/main/resources/templates/consultantreg.html
+++ b/src/main/resources/templates/consultantreg.html
@@ -5,26 +5,26 @@
 <head>
     <meta charset="utf-8">
     <title>Konzulens regisztráció</title>
-    <!--    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>-->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/open-iconic/1.1.1/font/css/open-iconic-bootstrap.min.css">
 
-    <link th:href="@{/css/bootstrap.css}" href="../static/css/base.css" rel="stylesheet" type="text/css" />
+<!--    <link th:href="@{/css/bootstrap.css}" href="../static/css/base.css" rel="stylesheet" type="text/css" />
     <script th:src="@{/js/jquery.js}"></script>
     <script th:src="@{/js/popper.js}"></script>
-    <script th:src="@{/js/bootstrap.js}"></script>
+    <script th:src="@{/js/bootstrap.js}"></script>-->
 
     <link th:href="@{/css/base.css}" rel="stylesheet" type="text/css" />
     <link th:href="@{/css/login.css}" rel="stylesheet" type="text/css" />
 </head>
 <body>
-<div>
-    <div class = "jumbotron jumbotron-fluid">
+<div class = "content">
+    <div class="contentWrap">
         <div>
             <h1 class="welcomeText"><strong>Konzulens regisztráció</strong></h1></br>
         </div>
-
         <div class = "d-flex justify-content-center p-3 text-white">
             <div>
                 <form name="loginform" class="form-group" th:action="@{/consultantreg}" method="post">
@@ -54,22 +54,21 @@
                                 </p>
                             </div>
                             <div class="loginerror" th:if="${regSuccess == 'already'}">
-                                <p>
-                                    <span>Már regisztrált a NEPTUN kód!</span>
-                                </p>
+                                <span class="oi oi-warning"></span> Már regisztrált a NEPTUN kód!
                             </div>
                         </div>
                     </div>
                 </form>
             </div>
         </div>
-
     </div>
-    <div class="container">
-        <div class="center">
-            <img th:src="@{/img/me_logo.png}" src="">
+    <footer class="footer">
+        <div class="container">
+            <div class="center">
+                <img th:src="@{/img/me_logo.png}" src="">
+            </div>
         </div>
-    </div>
+    </footer>
 
 </div>
 </body>
