--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -5,50 +5,54 @@
 <head>
     <meta charset="utf-8">
     <title>Regisztráció</title>
-    <!--    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/open-iconic/1.1.1/font/css/open-iconic-bootstrap.min.css">
 
-    <link th:href="@{/css/bootstrap.css}" href="../static/css/base.css" rel="stylesheet" type="text/css"/>
+<!--    <link th:href="@{/css/bootstrap.css}" href="../static/css/base.css" rel="stylesheet" type="text/css"/>
     <script th:src="@{/js/jquery.js}"></script>
     <script th:src="@{/js/popper.js}"></script>
-    <script th:src="@{/js/bootstrap.js}"></script>
+    <script th:src="@{/js/bootstrap.js}"></script>-->
 
     <link th:href="@{/css/base.css}" rel="stylesheet" type="text/css"/>
     <link th:href="@{/css/login.css}" rel="stylesheet" type="text/css"/>
 </head>
+
+<!------------------------------------------------------------------------------------------------------------------------------->
+
 <body>
-<div>
-    <div class="jumbotron jumbotron-fluid">
-        <div>
-            <h1 class="welcomeText"><strong>Regisztráció</strong></h1></br>
-        </div>
-        <div class="d-flex justify-content-center p-3 text-white">
-            <div class="regBtn">
-                <a th:href="@{/consultantreg}">
-                    <button type="button" class="btn btn-primary" name="forgotpassword">Konzulens</button>
-                </a>
-                <a th:href="@{/studentreg}">
-                    <button type="button" class="btn btn-primary" name="forgotpassword">Hallgató</button>
-                </a>
-                <div class="regBtnBack">
-                    <a th:href="@{/}">
-                        <button type="button" class="btn btn-info" name="forgotpassword">Vissza</button>
+<div class = "content">
+    <div class="contentWrap">
+            <div>
+                <h1 class="welcomeText"><strong>Regisztráció</strong></h1></br>
+            </div>
+            <div class="d-flex justify-content-center p-3 text-white">
+                <div class="regBtn">
+                    <a th:href="@{/consultantreg}">
+                        <button type="button" class="btn btn-primary" name="forgotpassword"><span class="oi oi-caret-left"></span> Konzulens</button>
                     </a>
+                    <a th:href="@{/studentreg}">
+                        <button type="button" class="btn btn-primary" name="forgotpassword">Hallgató <span class="oi oi-caret-right"></span></button>
+                    </a>
+                    <div class="regBtnBack">
+                        <a th:href="@{/}">
+                            <button type="button" class="btn btn-info" name="forgotpassword">Vissza</button>
+                        </a>
+                    </div>
                 </div>
             </div>
-
-        </div>
-
-
-    </div>
-    <div class="container">
-        <div class="center">
-            <img th:src="@{/img/me_logo.png}" src="">
-        </div>
     </div>
 
-</div>
+    <footer class="footer">
+        <div class="container">
+            <div class="center">
+                <img th:src="@{/img/me_logo.png}" src="">
+            </div>
+        </div>
+    </footer>
+
+    </div>
 </body>
 </html>
