--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -1,3 +1,10 @@
+.regForm{
+    width: 40%;
+    margin-left: auto;
+    margin-right: auto;
+    color: white;
+}
+
 .loginerror{
     color: crimson;
     font-weight: bold;
@@ -5,22 +12,7 @@
 .successLogOut{
     color: forestgreen;
 }
-.container{
-    width: 90%;
-    height: auto;
-    overflow: auto;
-}
-.container img{
-    display: block;
-    max-height: 100%;
-    max-width: 100%;
-    margin-left: auto;
-    margin-right: auto;
-}
-.center{
-    width: 50%;
-    margin: auto;
-}
+
 
 .regBtn{
     width: 35%;
