--- a/src/main/resources/templates/consultant/updatetopic.html
+++ b/src/main/resources/templates/consultant/updatetopic.html
@@ -12,6 +12,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/open-iconic/1.1.1/font/css/open-iconic-bootstrap.min.css">
 
     <!--<link th:href="@{/static/css/bootstrap.css}" rel="stylesheet" type="text/css" />
     <script th:src="@{/static/js/jquery.js}"></script>
@@ -19,54 +21,74 @@
     <script th:src="@{/static/js/bootstrap.js}"></script>
     <script th:src="@{/js/test.js}"></script>-->
 
-    <link rel="stylesheet"
-          href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+
     <link th:href="@{/css/base.css}" rel="stylesheet" type="text/css"/>
     <link th:href="@{/css/home.css}" rel="stylesheet" type="text/css"/>
 </head>
 <body>
-<div>
-    <nav class="navbar navbar-expand-sm navbar-dark">
-        <div class="container-fluid">
-            <a th:href="@{/home}" class="navbar-brand font-weight-bolder"><strong>THESISMGR: </strong><span
-                    id="neptun" sec:authentication="principal.username"></span></a>
-            <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link" th:href="@{/home}">Témáim</a></li>
-                <li class="nav-item"><a class="nav-link" th:href="@{/consultant/alltopic}">Összes téma</a></li>
-                <li class="nav-item"><a class="nav-link" th:href="@{/consultant/createtopic}" href="/createtopic">Téma kiírás</a>
-                </li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-                <li class="dropdown"><a class=" btn dropdown-toggle nav-link" id="dropdown" data-toggle="dropdown">Személyes</a>
-                    <div class="dropdown-menu">
-                        <a class="dropdown-item" href="#">Adatok</a>
-                        <a class="dropdown-item" th:href="@{/logout}" href="/logout">Kijelentkezés</a>
-                    </div>
-                </li>
-            </ul>
-        </div>
-    </nav>
-</div>
-<form class="form-group createForm"  th:action="@{/updatetopic}" method="post">
-    <input type="hidden" name="topicid" th:value="${topic.topicid}">
-    <div class="p-2">
-        <label class="label">Téma címe</label><input class="form-control" type="text" name="topicname" th:value="${topic.name}" required />
-    </div>
-    <div class="p-2">
-        <label class="label">Téma részletes leírása</label>
-        <textarea class="form-control" required  name="description" rows="10" cols="40" th:text="${topic.description}"></textarea>
 
-    </div>
-    <div>
-        <div class="insertButton">
-            <button class="btn btn-success" name="login" type="submit">Módosítás</button>
+<div class="content">
+    <div class="contentWrap">
+        <!--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
+        <div>
+            <nav class="navbar navbar-expand-sm navbar-dark">
+                <div class="container-fluid">
+                    <a th:href="@{/home}" class="navbar-brand font-weight-bolder"><strong>THESISMGR: </strong><span
+                            id="neptun" sec:authentication="principal.username"></span></a>
+                    <ul class="navbar-nav navbar-collapse">
+                        <li class="nav-item"><a class="nav-link" th:href="@{/home}">Témáim</a></li>
+                        <li class="nav-item"><a class="nav-link" th:href="@{/consultant/alltopic}">Összes téma</a></li>
+                        <li class="nav-item"><a class="nav-link" th:href="@{/consultant/createtopic}"
+                                                href="/createtopic">Téma kiírás</a>
+                        </li>
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li class="dropdown"><a class=" btn dropdown-toggle nav-link" id="dropdown"
+                                                data-toggle="dropdown">Személyes <span class="oi oi-home"></span></a>
+                            <div class="dropdown-menu">
+                                <a class="dropdown-item" href="#"><span class="oi oi-person"></span> Adatok</a>
+                                <a class="dropdown-item" th:href="@{/logout}" href="/logout"><span
+                                        class="oi oi-account-logout"></span> Kijelentkezés</a>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
         </div>
-        <div class="insertButton">
-            <a th:href="@{/consultant/home}" class="btn btn-info">Vissza</a>
+        <!--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
+        <div class="d-flex justify-content-center">
+            <h3>Téma frissítése</h3>
         </div>
+        <form class="form-group createForm" th:action="@{/updatetopic}" method="post">
+            <input type="hidden" name="topicid" th:value="${topic.topicid}">
+            <input type="hidden" name="status" th:value="${topic.getStatus()}">
+            <div class="p-2">
+                <label class="label">Téma címe</label><input class="form-control" type="text" name="topicname"
+                                                             th:value="${topic.name}" required/>
+            </div>
+            <div class="p-2">
+                <label class="label">Téma részletes leírása</label>
+                <textarea class="form-control" required name="description" rows="10" cols="40"
+                          th:text="${topic.description}"></textarea>
+            </div>
+            <div>
+                <div class="insertButton">
+                    <button class="btn btn-success" name="login" type="submit"><span class="oi oi-arrow-circle-top"></span></button>
+                </div>
+                <div class="insertButton">
+                    <a th:href="@{/consultant/home}" class="btn btn-info">Vissza</a>
+                </div>
+            </div>
+        </form>
     </div>
-    <div class="message" th:text="${message}"></div>
-</form>
+    <footer class="footer">
+        <div class="container">
+            <div class="center">
+                <img th:src="@{/img/me_logo.png}" src="">
+            </div>
+        </div>
+    </footer>
+
 </div>
 </body>
 </html>
