--- a/src/main/resources/templates/informations.html
+++ b/src/main/resources/templates/informations.html
@@ -1,10 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>info</title>
-</head>
-<body>
+    <meta charset="utf-8">
+    <title>Információk</title>
 
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/open-iconic/1.1.1/font/css/open-iconic-bootstrap.min.css">
+
+    <!--    <link th:href="@{/css/bootstrap.css}" href="../static/css/base.css" rel="stylesheet" type="text/css" />
+        <script th:src="@{/js/jquery.js}"></script>
+        <script th:src="@{/js/popper.js}"></script>
+        <script th:src="@{/js/bootstrap.js}"></script>-->
+
+    <link th:href="@{/css/base.css}" href="../static/css/base.css" rel="stylesheet" type="text/css" />
+    <link th:href="@{/css/index.css}" href="../static/css/index.css" rel="stylesheet" type="text/css" />
+
+</head>
+
+<!------------------------------------------------------------------------------------------------------------------------------->
+
+<body>
+<div class = "content">
+    <div class="contentWrap">
+    A nyilvántartó rendszer azért jött létre, hogy...
+
+<div class="regBtnBack">
+    <a th:href="@{/}">
+        <button type="button" class="btn btn-info" name="forgotpassword">Vissza</button>
+    </a>
+</div>
+</div>
+<div class="container">
+    <div class="center">
+        <img th:src="@{/img/me_logo.png}" src="">
+    </div>
+</div>
 </body>
 </html>
