--- a/src/main/resources/templates/student/home.html
+++ b/src/main/resources/templates/student/home.html
@@ -11,6 +11,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/open-iconic/1.1.1/font/css/open-iconic-bootstrap.min.css">
 
     <!--<link th:href="@{/static/css/bootstrap.css}" rel="stylesheet" type="text/css" />
     <script th:src="@{/static/js/jquery.js}"></script>
@@ -18,8 +19,6 @@
     <script th:src="@{/static/js/bootstrap.js}"></script>
     <script th:src="@{/js/test.js}"></script>-->
 
-    <link rel="stylesheet"
-          href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link th:href="@{/css/base.css}" rel="stylesheet" type="text/css" />
     <link th:href="@{/css/home.css}" rel="stylesheet" type="text/css" />
     <script th:src="@{/js/basic.js}" type="text/javascript"></script>
@@ -28,17 +27,22 @@
 <div>
     <nav class="navbar navbar-expand-sm navbar-dark">
         <div class="container-fluid">
-            <a th:href="@{/home}" class="navbar-brand font-weight-bolder"><strong>THESISMGR: </strong><span id="neptun" sec:authentication="principal.username"></span></a>
-            <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link" th:href="@{/home}">Felvett témám</a></li>
-                <li class="nav-item"><a class="nav-link" th:href="@{/student/select}">Kiírt témák</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Link</a></li>
-            </ul>
+            <a th:href="@{/home}" class="navbar-brand font-weight-bolder brandtitle">
+                <img th:src="@{/img/me_logo.png}" width="30" height="30" class="d-inline-block align-top" alt="">
+                <strong>THESISMGR: </strong><span id="neptun" sec:authentication="principal.username"></span>
+            </a>
+            <div class="collapse navbar-collapse">
+                <ul class="nav navbar-nav">
+                    <li class="nav-item"><a class="nav-link" th:href="@{/home}">Felvett témám</a></li>
+                    <li class="nav-item"><a class="nav-link" th:href="@{/student/select}">Kiírt témák</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Hasznos információk</a></li>
+                </ul>
+            </div>
             <ul class="nav navbar-nav navbar-right">
-                <li class="dropdown"><a class=" btn dropdown-toggle nav-link" id="dropdown" data-toggle="dropdown">Személyes</a>
+                <li class="dropdown"><a class=" btn dropdown-toggle nav-link" id="dropdown" data-toggle="dropdown">Személyes <span class="oi oi-home"></span></a>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="#">Adatok</a>
-                        <a class="dropdown-item" th:href="@{/logout}" href="/logout">Kijelentkezés</a>
+                        <a class="dropdown-item" href="#"><span class="oi oi-person"></span> Adatok</a>
+                        <a class="dropdown-item" th:href="@{/logout}" href="/logout"><span class="oi oi-account-logout"></span> Kijelentkezés</a>
                     </div>
                 </li>
             </ul>
@@ -50,7 +54,7 @@
 <div class="d-flex justify-content-center">
     <h3>Felvett témám adatai</h3>
 </div>
-
+<span class="oi oi-icon-name" title="icon name" aria-hidden="true"></span>
 
 <div class="d-flex justify-content-center message" th:text="${updateMsg == true} ? 'Sikeres témaleadás': ''"></div>
 <div th:if="${nullMsg == false}">
@@ -67,6 +71,7 @@
                 <td th:text="${topic.getName()}"></td>
                 <td th:if="${topic.getStatus() == 'választható'}" class="successColor" th:text="${topic.getStatus()}"></td>
                 <td th:unless="${topic.getStatus() == 'választható'}" class="warnColor" th:text="${topic.getStatus()}"></td>
+                <td><a th:href="@{/student/consultation(topicid=${topic.getTopicid()})}"><button  class="btn btn-info topicButton">Konzultáció</button></a></td>
                 <td>
                     <form th:action="@{/describe}" method="post">
                         <input name="topicid" type="hidden" th:value="${topic.topicid}">
@@ -75,6 +80,7 @@
                 </td>
             </tr>
         </tbody>
+
     </table>
     <div id="topicdesc" class="topicDescription" th:text="${topic.description}"></div>
 
@@ -99,9 +105,10 @@
                         <h4>Lépés adatai</h4>
                         <button type="button" class="close" data-dismiss="modal">&times;</button>
                     </div>
-                    <form name="newStep" th:action="@{/student/newstep}" class="form-group" method="get">
+                    <form name="newStep" th:action="@{/student/newstep}" class="form-group" method="post">
                         <div class="modal-body">
                                 <input type="hidden"  name="topicid" th:value="${topic.getTopicid()}" />
+                                <input type="hidden" name="stepstatus" value="0" />
                                 <div class="p-2">
                                     <label>Megnevezés</label><input class="form-control" type="text" required  name="stepname" placeholder="lépés" />
                                 </div>
@@ -109,10 +116,10 @@
                                     <label>Rövid leírás</label><input class="form-control" type="text" required  name="stepdescription" placeholder="leírás" />
                                 </div>
                                 <div class="p-2">
-                                    <label>Határidő</label><input class="form-control" type="date" required  name="stepdeadline" />
+                                    <label>Határidő</label><input id="datePicker" class="form-control" type="date" required  name="stepdeadline" />
                                 </div>
                                 <div class="p-2">
-                                    <label>%</label><input class="form-control" type="number" required min="1" max="100"  name="steppercentage" />
+                                    <label>%</label><input class="form-control" type="number" required min="1" th:max="100-${sumpercentage}"  name="steppercentage" />
                                 </div>
                         </div>
                         <div class="modal-footer">
@@ -126,29 +133,80 @@
 
     </div>
 
+        <div class="statLeft">
+            <h3>Kiírva <span class="oi oi-bar-chart"></span></h3>
+            <span class="statText">Összes lépés: </span>
+            <span class="statLeftData" th:text="${stepnumber}"></span><br>
+            <span class="statText">Lépések %-a : </span>
+            <span class="statLeftData" th:text="${sumpercentage}"></span>
+        </div>
+        <div class="statRight">
+            <h3>Elvégzett <span class="oi oi-bar-chart"></span></h3>
+            <span class="statText">Összes lépés: </span>
+            <span class="statRightData" th:text="${stepDone}"></span><br>
+            <span class="statText">Lépések %-a : </span>
+            <span class="statRightData" th:text="${sumDonePercentage}"></span>
+        </div>
+
     <div class="d-flex justify-content-center jumbotron planningArea">
-        <table class="table table-hover planninTable">
+        <table class="table table-hover planningTable">
             <thead>
             <tr>
                 <th>Lépés</th>
                 <th>Rövid leírás</th>
-                <th>Státusz</th>
                 <th>%</th>
+                <th>Határidő</th>
+                <th>Elkészült</th>
+                <th>Törlés</th>
             </tr>
             </thead>
             <tbody>
-            <tr>
-                <td>nev</td>
-                <td>leiras</td>
-                <td>statusz</td>
-                <td>10%</td>
-
-            </tr>
+            <th:block th:each="step: ${steps}">
+                <tr th:if="${step.getStepstatus() == 0}">
+                    <td th:text="${step.getName()}"></td>
+                    <td th:text="${step.getDescription()}"></td>
+                    <td th:text="${step.getPercentage()}"></td>
+                    <td th:text="${step.getDeadline()}"></td>
+                    <td class="tdBtn">
+                        <a th:href="@{/student/donestep(stepid=${step.getStepid()})}">
+                            <button type="button" class="btn btn-success">
+                                <span class="oi oi-check"></span>
+                            </button>
+                        </a>
+                    </td>
+                    <td class="tdBtn">
+                        <a th:href="@{/student/deletestep(stepid=${step.getStepid()})}">
+                            <button type="button" class="btn btn-danger">
+                                <span class="oi oi-trash"></span>
+                            </button>
+                        </a>
+                    </td>
+                </tr>
+                <tr th:if="${step.getStepstatus() == 1}">
+                    <td class="doneStep" th:text="${step.getName()}"></td>
+                    <td class="doneStep" th:text="${step.getDescription()}"></td>
+                    <td class="doneStep" th:text="${step.getPercentage()}"></td>
+                    <td class="doneStep" th:text="${step.getDeadline()}"></td>
+                    <td class="tdBtn">
+                    </td>
+                    <td class="tdBtn">
+                        <a th:href="@{/student/deletestep(stepid=${step.getStepid()})}">
+                            <button type="button" class="btn btn-danger">
+                                <span class="oi oi-trash"></span>
+                            </button>
+                        </a>
+                    </td>
+                </tr>
+                </th:block>
             </tbody>
         </table>
     </div>
 
 </div>
+<!--<form method="post" th:action="@{/stepupload}" enctype="multipart/form-data">
+    <input type="file" name="file" /><br/><br/>
+    <input type="submit" value="Submit" />
+</form>-->
 
 <div class="d-flex justify-content-center" th:unless="${nullMsg == false}">Még nem vettél fel témát</div>
 <!--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
