--- a/src/main/resources/templates/studentreg.html
+++ b/src/main/resources/templates/studentreg.html
@@ -5,53 +5,73 @@
 <head>
     <meta charset="utf-8">
     <title>Hallgató regisztráció</title>
-    <!--    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/open-iconic/1.1.1/font/css/open-iconic-bootstrap.min.css">
 
-    <link th:href="@{/css/bootstrap.css}" href="../static/css/base.css" rel="stylesheet" type="text/css" />
+<!--    <link th:href="@{/css/bootstrap.css}" href="../static/css/base.css" rel="stylesheet" type="text/css" />
     <script th:src="@{/js/jquery.js}"></script>
     <script th:src="@{/js/popper.js}"></script>
-    <script th:src="@{/js/bootstrap.js}"></script>
+    <script th:src="@{/js/bootstrap.js}"></script>-->
 
     <link th:href="@{/css/base.css}" rel="stylesheet" type="text/css" />
     <link th:href="@{/css/login.css}" rel="stylesheet" type="text/css" />
 </head>
 <body>
-<div>
-    <div class = "jumbotron jumbotron-fluid">
+<div class = "content">
+    <div class="contentWrap">
         <div>
             <h1 class="welcomeText"><strong>Hallgató regisztráció</strong></h1></br>
         </div>
 
-        <div class = "d-flex justify-content-center p-3 text-white">
+        <div class = "regForm">
             <div>
-                <form name="loginform" class="form-group" th:action="@{/login}" action="/login" method="post">
+                <form name="loginform" class="form-group" th:action="@{/studentreg}" method="post">
                     <div class="p-2 bg-dark">
-                        <label>Felhasználónév</label><input class="form-control" type="text" required  name="username" placeholder="Username" />
+                        <label>NEPTUN KÓD: </label><input class="form-control" type="text"  required  name="username" placeholder="neptun kód" />
+                    </div>
+                    <div class="p-2 bg-dark">
+                        <label>Teljes név: </label><input class="form-control" type="text" required  name="name" placeholder="Teljes név" />
+                    </div>
+                    <div class="p-2 bg-dark">
+                        <label>E-mail: </label><input class="form-control" type="email" required  name="email" placeholder="email" />
+                    </div>
+                    <div class="p-2 bg-dark">
+                        <label>Kar: </label>
+                        <select class="form-control" name="faculty">
+                            <option>GÉIK</option>
+                            <option>MAK</option>
+                            <option>MFK</option>
+                            <option>ÁJK</option>
+                            <option>GTK</option>
+                            <option>BTK</option>
+                            <option>BBZI</option>
+                            <option>EK</option>
+                        </select>
+                    </div>
+                    <div class="p-2 bg-dark">
+                        <label>Szak</label><input class="form-control" type="text"  required  name="specialization" />
                     </div>
                     <div class="p-2 bg-dark">
                         <label>Jelszó</label><input class="form-control" type="password" required  name="password" placeholder="Password" />
                     </div>
                     <div>
                         <div>
-                            <button class="btn btn-success" name="login" type="submit">Bejelentkezés</button>
-                            <a href="#"><button type="button" class="btn btn-info" name="forgotpassword">Elfelejtett jelszó</button></a>
+                            <button class="btn btn-success" name="login" type="submit">Regisztráció</button>
                             <a th:href="@{/registration}"><button type="button" class="btn btn-info" name="forgotpassword">Vissza</button></a>
                         </div>
                     </div>
                     <div>
                         <div>
-                            <div id="loginerror" th:if="${param.error}">
+                            <div class="loginerror" th:if="${regSuccess == 'false'}">
                                 <p>
-                                    <span>Érvénytelen felhasználónév vagy jelszó</span>
+                                    <span>Hiba történt</span>
                                 </p>
                             </div>
-                            <div id="successLogOut" th:if="${param.logout}">
-                                <p>
-                                    <span>Sikeres kijelentkezés</span>
-                                </p>
+                            <div class="loginerror" th:if="${regSuccess == 'already'}">
+                                <span class="oi oi-warning"></span> Már regisztrált a NEPTUN kód!
                             </div>
                         </div>
                     </div>
@@ -60,11 +80,13 @@
         </div>
 
     </div>
-    <div class="container">
-        <div class="center">
-            <img th:src="@{/img/me_logo.png}" src="">
+    <footer class="footer">
+        <div class="container">
+            <div class="center">
+                <img th:src="@{/img/me_logo.png}" src="">
+            </div>
         </div>
-    </div>
+    </footer>
 
 </div>
 </body>
