--- a/src/main/resources/templates/student/consultation.html
+++ b/src/main/resources/templates/student/consultation.html
@@ -25,31 +25,31 @@
     <script th:src="@{/js/basic.js}" type="text/javascript"></script>
 </head>
 <body>
-<div>
-    <nav class="navbar navbar-expand-sm navbar-dark">
-        <div class="container-fluid">
-            <a th:href="@{/home}" class="navbar-brand font-weight-bolder brandtitle">
-                <img th:src="@{/img/me_logo.png}" width="30" height="30" class="d-inline-block align-top" alt="">
-                <strong>THESISMGR: </strong><span id="neptun" sec:authentication="principal.username"></span>
-            </a>
-            <div class="collapse navbar-collapse">
-                <ul class="nav navbar-nav">
-                    <li class="nav-item"><a class="nav-link" th:href="@{/home}">Felvett témám</a></li>
-                    <li class="nav-item"><a class="nav-link" th:href="@{/student/select}">Kiírt témák</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Hasznos információk</a></li>
+<div class = "content">
+    <div class="contentWrap">
+        <nav class="navbar navbar-expand-sm navbar-dark">
+            <div class="container-fluid">
+                <a th:href="@{/home}" class="navbar-brand font-weight-bolder brandtitle">
+                    <img th:src="@{/img/me_logo.png}" width="30" height="30" class="d-inline-block align-top" alt="">
+                    <strong>THESISMGR: </strong><span id="neptun" sec:authentication="principal.username"></span>
+                </a>
+                <div class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav">
+                        <li class="nav-item"><a class="nav-link" th:href="@{/home}">Felvett témám</a></li>
+                        <li class="nav-item"><a class="nav-link" th:href="@{/student/select}">Kiírt témák</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Hasznos információk</a></li>
+                    </ul>
+                </div>
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="dropdown"><a class=" btn dropdown-toggle nav-link" id="dropdown" data-toggle="dropdown">Személyes <span class="oi oi-home"></span></a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="#"><span class="oi oi-person"></span> Adatok</a>
+                            <a class="dropdown-item" th:href="@{/logout}" href="/logout"><span class="oi oi-account-logout"></span> Kijelentkezés</a>
+                        </div>
+                    </li>
                 </ul>
             </div>
-            <ul class="nav navbar-nav navbar-right">
-                <li class="dropdown"><a class=" btn dropdown-toggle nav-link" id="dropdown" data-toggle="dropdown">Személyes <span class="oi oi-home"></span></a>
-                    <div class="dropdown-menu">
-                        <a class="dropdown-item" href="#"><span class="oi oi-person"></span> Adatok</a>
-                        <a class="dropdown-item" th:href="@{/logout}" href="/logout"><span class="oi oi-account-logout"></span> Kijelentkezés</a>
-                    </div>
-                </li>
-            </ul>
-        </div>
-    </nav>
-</div>
+        </nav>
 <!------------------------------------------------------------------------------------------------------------------->
 <hr>
 <div class="d-flex justify-content-center ">
@@ -100,7 +100,6 @@
     <table class="table table-hover consultationTable">
         <thead>
         <tr>
-            <th>id</th>
             <th>Konzultáció cím</th>
             <th>Összefoglaló</th>
             <th>Státusz</th>
@@ -112,7 +111,6 @@
         <tbody>
         <th:block th:each="consultation: ${consultations}">
             <tr>
-                <td th:text="${consultation.getConsultationid()}"></td>
                 <td th:text="${consultation.getName()}"></td>
                 <td th:text="${consultation.getDescription()}"></td>
                 <td th:if="${consultation.getStatus() == 'Elfogadva'}" class="successColor" th:text="${consultation.getStatus()}"></td>
@@ -123,7 +121,7 @@
                     <div class="container">
                         <!-- Trigger the modal with a button -->
                         <div class="updateConsultationBtn">
-                            <button type="button" class="btn btn-success btn-sm" data-toggle="modal" th:attr="data-target='#update'+${consultation.getConsultationid()}"><span class="oi oi-pencil"></span> Rögzítés</button>
+                            <button type="button" class="btn btn-success" data-toggle="modal" th:attr="data-target='#update'+${consultation.getConsultationid()}"><span class="oi oi-pencil"></span></button>
                         </div>
                         <!-- Modal -->
                         <div class="modal fade" th:id="update+${consultation.getConsultationid()}" role="dialog">
@@ -145,12 +143,12 @@
                                             </div>
                                             <div class="p-2">
                                                 <label>Megbeszéltek</label>
-                                                <textarea class="form-control" required  name="description" rows="10" cols="40" th:text="${consultation.getDescription()}"></textarea>
+                                                <textarea class="form-control" required  name="description" rows="10" cols="40" th:text="${consultation.getDescription()}" placeholder="mi hangzott el a konzultáción?"></textarea>
                                             </div>
                                         </div>
                                         <div class="modal-footer">
                                             <button type="submit" class="btn btn-primary" >Rögzítés</button>
-                                            <button type="button" class="btn btn-default" data-dismiss="modal">Bezárás</button>
+                                            <button type="button" class="btn btn-default" data-dismiss="modal">Mégse</button>
                                         </div>
                                     </form>
                                 </div>
@@ -163,7 +161,7 @@
                     <form th:action="@{/student/deleterequest}" method="post">
                         <input type="hidden" name="consultationid" th:value="${consultation.getConsultationid()}">
                         <input type="hidden" name="topicid" th:value="${topicid}">
-                        <button class="btn btn-danger" type="submit"><span class="oi oi-trash"></span></button>
+                        <button th:unless="${consultation.getStatus() == 'Elfogadva'}" class="btn btn-danger" type="submit"><span class="oi oi-trash"></span></button>
                     </form>
                 </td>
             </tr>
@@ -171,6 +169,14 @@
         </tbody>
 
     </table>
+</div>
+    <footer class="footer">
+        <div class="container">
+            <div class="center">
+                <img th:src="@{/img/me_logo.png}" src="">
+            </div>
+        </div>
+    </footer>
 </div>
 </body>
 </html>
