--- a/src/main/resources/templates/student/select.html
+++ b/src/main/resources/templates/student/select.html
@@ -11,6 +11,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/open-iconic/1.1.1/font/css/open-iconic-bootstrap.min.css">
 
     <!--<link th:href="@{/static/css/bootstrap.css}" rel="stylesheet" type="text/css" />
     <script th:src="@{/static/js/jquery.js}"></script>
@@ -24,28 +25,33 @@
     <link th:href="@{/css/home.css}" rel="stylesheet" type="text/css" />
 </head>
 <body>
-<div>
-    <nav class="navbar navbar-expand-sm navbar-dark">
-        <div class="container-fluid">
-            <a th:href="@{/home}" class="navbar-brand font-weight-bolder"><strong>THESISMGR: </strong><span id="neptun" sec:authentication="principal.username"></span></a>
-            <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link" th:href="@{/home}">Felvett témám</a></li>
-                <li class="nav-item"><a class="nav-link" th:href="@{/student/select}">Kiírt témák</a></li>
-                <li class="nav-item"><a class="nav-link" href="*">Link</a></li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-                <li class="dropdown"><a class=" btn dropdown-toggle nav-link" id="dropdown" data-toggle="dropdown">Személyes</a>
-                    <div class="dropdown-menu">
-                        <a class="dropdown-item" href="#">Adatok</a>
-                        <a class="dropdown-item" th:href="@{/logout}" href="/logout">Kijelentkezés</a>
-                    </div>
-                </li>
-            </ul>
-        </div>
-    </nav>
-</div>
+<div class = "content">
+    <div class="contentWrap">
+        <nav class="navbar navbar-expand-sm navbar-dark">
+            <div class="container-fluid">
+                <a th:href="@{/home}" class="navbar-brand font-weight-bolder brandtitle">
+                    <img th:src="@{/img/me_logo.png}" width="30" height="30" class="d-inline-block align-top" alt="">
+                    <strong>THESISMGR: </strong><span id="neptun" sec:authentication="principal.username"></span>
+                </a>
+                <div class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav">
+                        <li class="nav-item"><a class="nav-link" th:href="@{/home}">Felvett témám</a></li>
+                        <li class="nav-item"><a class="nav-link" th:href="@{/student/select}">Kiírt témák</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Hasznos információk</a></li>
+                    </ul>
+                </div>
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="dropdown"><a class=" btn dropdown-toggle nav-link" id="dropdown" data-toggle="dropdown">Személyes <span class="oi oi-home"></span></a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="#"><span class="oi oi-person"></span> Adatok</a>
+                            <a class="dropdown-item" th:href="@{/logout}" href="/logout"><span class="oi oi-account-logout"></span> Kijelentkezés</a>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </nav>
 <!--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
-<hr>
+
 <div class="d-flex justify-content-center">
     <h3>Felvehető témák</h3>
 </div>
@@ -66,15 +72,12 @@
                 <td th:text="${topic.getName()}"></td>
                 <td th:if="${topic.getStatus() == 'választható'}" class="successColor" th:text="${topic.getStatus()}"></td>
                 <td th:unless="${topic.getStatus() == 'választható'}" class="warnColor" th:text="${topic.getStatus()}"></td>
-                <td><a th:href="@{/student/choosetopic(topicid=(${topic.topicid}))}"><button  class="btn btn-primary">Részletek</button></a></td>
+                <td><a th:href="@{/student/choosetopic(topicid=(${topic.topicid}))}"><button  class="btn btn-primary"><span class="oi oi-info"></span></button></a></td>
                 <td th:if="${nullTopic == true && topic.getStatus() == 'választható'}">
                     <form th:action="@{/student/selected}" method="post">
                         <input type="hidden" name="topicid" th:value="${topic.getTopicid()}">
                         <button type="submit"  class="btn btn-success">Felvétel</button>
                     </form>
-<!--                    <a th:href="@{/student/selected(topicid=(${topic.topicid}))}">
-                        <button  class="btn btn-success">Felvétel</button>
-                    </a>-->
                 </td>
                 <td th:if="${nullTopic == false}"><button disabled class="btn btn-warning">Van témád</button></td>
             </tr>
@@ -83,6 +86,14 @@
     </table>
     <div id="topicdesc" class="topicDescription" th:text="${description}"></div>
 </div>
-<!--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
+    </div>
+    <footer class="footer">
+        <div class="container">
+            <div class="center">
+                <img th:src="@{/img/me_logo.png}" src="">
+            </div>
+        </div>
+    </footer>
+</div>
 </body>
 </html>
